[tool.poetry]
name = "featureranker"
version = "1.3.2"
description = "Feature ranking ensemble"
authors = ["Logan Hallee <lhallee99@gmail.com>"]
keywords = ["feature, ranker, sklearn"]
repository = "https://github.com/lhallee/feature-ranker"
license = "CC-BY-NC-SA-4.0"
readme = "README.md"
include = [
    "LICENSE.md",
    "README.md",
]

packages = [
    { include = "featureranker", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
pandas = ">=2.1.1"
numpy = ">=1.26.0"
scikit-learn = ">=1.3.2"
scikit-optimize = ">=0.8.1"
matplotlib = ">=3.8.1"
seaborn = "*"
scipy = ">=1.11.2"
xgboost = ">=2.0.1"
tqdm = ">=4.66.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
